added s3 maven repo extension

--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<extensions>
+			<extension>
+				<groupId>org.springframework.build.aws</groupId>
+				<artifactId>org.springframework.build.aws.maven</artifactId>
+				<version>3.0.0.RELEASE</version>
+			</extension>
+		</extensions>
 	</build>
 
 	<distributionManagement>
